sass/pages/common/PageTreeCompact.scss
.PageTreeCompact {
  width: 100%;

  &__page-name {
    font-size: 14px;
  }

  .TreeNodeExpandedIcon,
  .TreeNodeFolderIcon,
  .RowSpinner {
    margin-right: 10px;
    margin-left: 10px;
    font-size: 14px;
  }

  .TreeNodeFolderIcon {
    color: $color-pf-light-blue-400;
  }

  &__icons-label {
    outline: 0;
    cursor: pointer;
  }

  &__tree-column-td--empty {
    .TreeNodeExpandedIcon {
      opacity: 0;
      visibility: hidden;
    }

    .TreeNodeExpandedIcon,
    .PageTreeCompact__page-name,
    [role="button"] {
      cursor: default;
    }
  }

  &__actions-col,
  &__status-col {
    width: 40px;
  }

  // sass-lint:disable force-element-nesting nesting-depth no-qualifying-elements class-name-format
  &.table > tbody > &__row--selected {
    &,
    &:hover {
      background-color: $color-dragitem-bg;
    }
  }
  // sass-lint:enable force-element-nesting nesting-depth no-qualifying-elements class-name-format

  .PageTreeActionMenuButton,
  .PageTreeActionMenuButton:focus {
    height: 18px;
    margin: 0;
    padding: 0 10px;
    outline: 0;
  }

  // Bootstrap overrides
  // sass-lint:disable force-element-nesting, no-qualifying-elements, class-name-format
  .dropdown-kebab-pf.btn-group > .btn:first-child {
    padding: 0 10px;
    color: $color-rating-filter-star-empty;
  }
  // sass-lint:enable force-element-nesting, no-qualifying-elements, class-name-format

}

// Bootstrap overrides
// sass-lint:disable force-element-nesting, no-qualifying-elements, class-name-format
.PageTreeCompact.table > tbody > tr:hover,
.PageTreeCompact.table > tbody > tr:hover > td,
.PageTreeCompact.table > tbody > tr:hover > th {
  background-color: $color-dragitem-bg;
}

.PageTreeCompact.table > tbody > tr > td {
  padding: 10px 0;
  border-top: 0;
  color: $color-white;
}
// sass-lint:enable force-element-nesting, no-qualifying-elements, class-name-format

